crates/assay-types/tests/snapshots/schema_snapshots__session-status-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "SessionRunState": {
      "description": "Run state of a single session in the orchestrator.",
      "oneOf": [
        {
          "const": "pending",
          "description": "Session is queued and waiting for dependencies/concurrency slot.",
          "type": "string"
        },
        {
          "const": "running",
          "description": "Session is currently executing.",
          "type": "string"
        },
        {
          "const": "completed",
          "description": "Session completed successfully.",
          "type": "string"
        },
        {
          "const": "failed",
          "description": "Session failed during execution.",
          "type": "string"
        },
        {
          "const": "skipped",
          "description": "Session was skipped (e.g., upstream dependency failed).",
          "type": "string"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Per-session status snapshot for observability.\n\nPersisted as part of [`OrchestratorStatus`] in\n`.assay/orchestrator/<run_id>/state.json` and readable by the\n`orchestrate_status` MCP tool.",
  "properties": {
    "completed_at": {
      "description": "When the session finished (None if still pending/running).",
      "format": "date-time",
      "type": [
        "string",
        "null"
      ]
    },
    "duration_secs": {
      "description": "Wall-clock duration in seconds (None if not yet completed).",
      "format": "double",
      "type": [
        "number",
        "null"
      ]
    },
    "error": {
      "description": "Error message if the session failed.",
      "type": [
        "string",
        "null"
      ]
    },
    "name": {
      "description": "Effective session name (from manifest or spec name fallback).",
      "type": "string"
    },
    "skip_reason": {
      "description": "Reason the session was skipped (e.g., \"upstream 'auth' failed\").",
      "type": [
        "string",
        "null"
      ]
    },
    "spec": {
      "description": "Spec path or name this session evaluates.",
      "type": "string"
    },
    "started_at": {
      "description": "When the session started executing (None if still pending/skipped).",
      "format": "date-time",
      "type": [
        "string",
        "null"
      ]
    },
    "state": {
      "$ref": "#/$defs/SessionRunState",
      "description": "Current run state."
    }
  },
  "required": [
    "name",
    "spec",
    "state"
  ],
  "title": "SessionStatus",
  "type": "object"
}
