crates/assay-types/tests/snapshots/schema_snapshots__settings-override-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Settings overrides applied to an agent session.\n\nAll fields are optional or default-empty — only specified values override\nthe base configuration.",
  "properties": {
    "max_turns": {
      "description": "Maximum number of agent turns before forced stop.",
      "format": "uint32",
      "minimum": 0,
      "type": [
        "integer",
        "null"
      ]
    },
    "model": {
      "description": "Model identifier to use (e.g., `\"sonnet\"`, `\"opus\"`).",
      "type": [
        "string",
        "null"
      ]
    },
    "permissions": {
      "description": "Permissions granted to the agent (e.g., `\"filesystem\"`, `\"network\"`).",
      "items": {
        "type": "string"
      },
      "type": "array"
    },
    "tools": {
      "description": "Tools available to the agent (e.g., `\"bash\"`, `\"browser\"`).",
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  },
  "title": "SettingsOverride",
  "type": "object"
}
