crates/assay-types/tests/snapshots/schema_snapshots__spec-preconditions-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Preconditions declared in a `gates.toml` `[preconditions]` section.\n\nWhen present, the gate runner checks all `requires` slugs (other gate specs\nwhose last run must have passed) and runs all `commands` before evaluating\nany criteria.",
  "properties": {
    "commands": {
      "description": "Shell commands that must exit 0 before gate evaluation proceeds.\n\nOmitted from serialized output when empty.",
      "items": {
        "type": "string"
      },
      "type": "array"
    },
    "requires": {
      "description": "Slugs of other gate specs that must have passed their last recorded run.\n\nOmitted from serialized output when empty.",
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  },
  "title": "SpecPreconditions",
  "type": "object"
}
