crates/assay-types/tests/snapshots/schema_snapshots__tool-call-summary-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Summary of tool calls during an agent session.",
  "properties": {
    "by_tool": {
      "additionalProperties": {
        "format": "uint32",
        "minimum": 0,
        "type": "integer"
      },
      "description": "Tool call counts by tool name (e.g. {\"bash\": 5, \"edit\": 3}).",
      "type": "object"
    },
    "error_count": {
      "description": "Number of tool calls that resulted in an error.",
      "format": "uint32",
      "minimum": 0,
      "type": "integer"
    },
    "total": {
      "description": "Total number of tool calls made by the agent.",
      "format": "uint32",
      "minimum": 0,
      "type": "integer"
    }
  },
  "required": [
    "total",
    "by_tool",
    "error_count"
  ],
  "title": "ToolCallSummary",
  "type": "object"
}
