crates/assay-types/tests/snapshots/schema_snapshots__worktree-info-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Information about a single git worktree.\n\nReturned by worktree create and list operations.",
  "properties": {
    "base_branch": {
      "description": "The base branch this worktree was created from.\nPopulated on create and list (from metadata), `None` when metadata is missing.",
      "type": [
        "string",
        "null"
      ]
    },
    "branch": {
      "description": "The git branch checked out in this worktree (e.g., `assay/auth-flow`).",
      "type": "string"
    },
    "path": {
      "description": "Absolute path to the worktree directory.",
      "type": "string"
    },
    "spec_slug": {
      "description": "The spec slug this worktree is associated with.",
      "type": "string"
    }
  },
  "required": [
    "spec_slug",
    "path",
    "branch"
  ],
  "title": "WorktreeInfo",
  "type": "object"
}
